@@ -11,6 +11,7 @@ use Wikibase::Datatype::Print::Value::Item;
 use Wikibase::Datatype::Print::Value::Monolingual;
 use Wikibase::Datatype::Print::Value::Property;
 use Wikibase::Datatype::Print::Value::Quantity;
+use Wikibase::Datatype::Print::Value::Sense;
 use Wikibase::Datatype::Print::Value::String;
 use Wikibase::Datatype::Print::Value::Time;
 
@@ -37,6 +38,8 @@ sub print {
 		$ret = Wikibase::Datatype::Print::Value::Property::print($obj, $opts_hr);
 	} elsif ($type eq 'quantity') {
 		$ret = Wikibase::Datatype::Print::Value::Quantity::print($obj, $opts_hr);
+	} elsif ($type eq 'sense') {
+		$ret = Wikibase::Datatype::Print::Value::Sense::print($obj, $opts_hr);
 	} elsif ($type eq 'string') {
 		$ret = Wikibase::Datatype::Print::Value::String::print($obj, $opts_hr);
 	} elsif ($type eq 'time') {
@@ -114,6 +117,7 @@ L<Wikibase::Datatype::Print::Value::Item>,
 L<Wikibase::Datatype::Print::Value::Monolingual>,
 L<Wikibase::Datatype::Print::Value::Property>,
 L<Wikibase::Datatype::Print::Value::Quantity>,
+L<Wikibase::Datatype::Print::Value::Sense>,
 L<Wikibase::Datatype::Print::Value::String>,
 L<Wikibase::Datatype::Print::Value::Time>.
 
